[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/newMap/fullmap.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/menu/menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/landingPageYT/cmaeraView.gd" type="Script" id=3]
[ext_resource path="res://landingpage/landing.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/landingPageYT/landingMenu.gd" type="Script" id=5]

[node name="CanvasLayer" type="CanvasLayer"]

[node name="background" type="Spatial" parent="."]

[node name="GameMap" parent="background" instance=ExtResource( 1 )]

[node name="ViewportContainer" type="ViewportContainer" parent="background"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Viewport" type="Viewport" parent="background/ViewportContainer"]
size = Vector2( 1224, 700 )
handle_input_locally = false
render_target_update_mode = 3

[node name="cmaeraView" type="Spatial" parent="background/ViewportContainer/Viewport"]
transform = Transform( -0.436755, -0.281656, 0.854351, 0, 0.949721, 0.313098, -0.899581, 0.136747, -0.414795, 0, 0, 0 )
script = ExtResource( 3 )

[node name="Camera" type="Camera" parent="background/ViewportContainer/Viewport/cmaeraView"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.81196e-06, 15.1651, 112.236 )
far = 202.8

[node name="Menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 60
custom_constants/margin_top = 80
custom_constants/margin_left = 60
custom_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MarginContainer"]
margin_left = 60.0
margin_top = 80.0
margin_right = 1164.0
margin_bottom = 620.0
script = ExtResource( 5 )

[node name="Credentials" parent="Menu/MarginContainer/VBoxContainer" instance=ExtResource( 4 )]
position = Vector2( -57, -79 )

[node name="MainMenu" parent="Menu/MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
visible = false

[connection signal="playerIslogedIn" from="Menu/MarginContainer/VBoxContainer/Credentials" to="Menu/MarginContainer/VBoxContainer" method="_on_Credentials_playerIslogedIn"]
[connection signal="playerLogingOut" from="Menu/MarginContainer/VBoxContainer/MainMenu" to="Menu/MarginContainer/VBoxContainer" method="_on_MainMenu_playerLogingOut"]
